<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".login.LoginActivity"
    android:layout_margin="14sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:text="@string/login"
        android:textSize="40sp"
        android:layout_margin="10sp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingLeft="10sp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/phone"
        android:paddingLeft="10sp"/>

    <CheckBox
        android:id="@+id/cb_t_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept" />

    <Button
        android:id="@+id/b_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/blue_submit"
        android:textColor="@color/white"
        android:layout_marginTop="10sp"/>


</LinearLayout>