<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/orange_text"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:background="@color/orange"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/green_text"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:background="@color/green"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/blue_text"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:background="@color/blue"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:text="@string/button1_text"
            android:background="@color/button_blue"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:src="@drawable/pizza"
            android:scaleType="fitXY"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:text="@string/button2_text"
            android:background="@color/button2_green"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_yellow">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_an_edittext"
            android:layout_marginTop="40dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_an_new_edittext"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background_blue"
        android:paddingTop="10sp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_me"
            android:layout_marginStart="10sp"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/auto_backup"
            android:layout_marginStart="46sp"
            android:paddingTop="7sp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_blue">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:numStars="5"
            android:paddingTop="16sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="20sp"/>
        </RadioGroup>


    </LinearLayout>

</LinearLayout>