<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".week4.HappyHolidays">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/header_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/parent2"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_happy_holidays"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="190dp"
        android:src="@drawable/poster_sparkling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <TextView
        android:id="@+id/Happy_holidays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Happy Holidays!"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image_happy_holidays"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="100dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on"
        app:layout_constraintTop_toBottomOf="@+id/parent2"
        app:layout_constraintStart_toEndOf="@+id/Happy_holidays"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/message1_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message1"
        app:layout_constraintStart_toStartOf="@id/image_happy_holidays"
        app:layout_constraintTop_toBottomOf="@id/image_happy_holidays"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/message2_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message2"
        app:layout_constraintStart_toStartOf="@id/image_happy_holidays"
        app:layout_constraintTop_toBottomOf="@+id/message1_happy"/>

    <TextView
        android:id="@+id/message3_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message3"
        app:layout_constraintStart_toStartOf="@id/image_happy_holidays"
        app:layout_constraintTop_toBottomOf="@id/message2_happy"/>

    <Button
        android:id="@+id/button_happy"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="LET IT SNOW"
        android:background="@color/button_happy_holidays"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/message3_happy"
        app:layout_constraintTop_toBottomOf="@id/message3_happy"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="GINGLES BELLS"
        android:background="@color/button_happy_holidays"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/button_happy"
        app:layout_constraintTop_toBottomOf="@id/message3_happy"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>